Microservices/Microservices/K8S/microservices-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookservice
  template:
    metadata:
      labels:
        app: bookservice
    spec:
      containers:
        - name: bookservice
          image: secvbulrep/bookservice:latest
