Microservices/Microservices/K8S/managing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managingservice
  template:
    metadata:
      labels:
        app: managingservice
    spec:
      containers:
        - name: managingservice
          image: secvbulrep/managingservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: managingservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: managingservice
  ports:
    - port: 80
      protocol: TCP
      name: managingservice
      targetPort: 80
