Microservices/Microservices/K8S/microservices-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-srv
spec:
  type: NodePort
  selector:
    app: bookservice
  ports:
    - name: bookservice
      port: 80
      protocol: TCP
      targetPort: 80
